[package]
name = "algo-playground-rs"
version = "0.1.0"
edition = "2021"
description = """
Just a space for playing around with different approaches to various algorithms
in Rust.
THIS IS NOT FOR PRODUCTION USE.
"""

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
